@@ -1,5 +1,9 @@
 2002-02-04  Padraig O'Briain  <padraig.obriain@sun.com>
 
+	* panel.c: Correct popping up of panel's context meny using keyboard.
+
+2002-02-04  Padraig O'Briain  <padraig.obriain@sun.com>
+
 	These changes update the changes which give focus to the panel and
 	object on the panel to take account of the fix to bug 50339 which
 	requires that a widget in a GtkWindow have focus initially, rather
